# Putusan-crawler

./: .gitattributes  .gitignore  AGENTS.md  README.md  crawl-putusan.ps1  crawl-tppo.ps1  deepseek_ocr_colab_vllm_checkpointed.ipynb  goal.md  main.py  pyproject.toml  run_extractions.py  setup.cmd  setup.ps1  setup.sh
LLM-aggregator/: Putusan-schema.md  run-all-extractions.ps1
LLM-aggregator/Anak/Deepseek/: API.md  README.md  progress.jsonl  progress.jsonl.bak  run-anak-deepseek.ps1  run-anak-deepseek.sh
LLM-aggregator/Anak/GLM/: API.md  README.md  run-anak-glm.ps1  run-anak-glm.sh
LLM-aggregator/Anak/GPT/: CODEX_EXTRACTION_INSTRUCTIONS.md  progress.jsonl  (+2 more)
LLM-aggregator/lib/: codex-no-mcp.ps1  codex-usage.ps1
RAG/: ORCHESTRATION.md  README.md
crawler/: __init__.py  cli.py  crawler.py  parsing.py  storage.py
extractor/: EVALUATION.md  README.md  __init__.py  cli.py  core.py  metrics.py  reporting.py
llm_aggregator/: __init__.py  anak_deepseek.py  anak_glm.py  anak_qwen.py  asusila_deepseek.py  asusila_qwen.py  tppo_deepseek.py  tppo_glm.py  tppo_qwen.py
notebooks/: DeepSeek_R1_0528_Qwen3_(8B)_GRPO.ipynb  Qwen3_5_(4B).ipynb  build_dataset.py
putusan-interface/: .gitignore  AGENTS.md  README.md  package.json
putusan-interface/src/: app.html
scripts/: extract_tppo_raw_text.py  ocr_tppo_empty_raw_text.py
sinergi/: cli.py  crawler.py  parsing.py  storage.py
tests/: test_anak_deepseek.py  test_download_progress.py  test_extractor_core.py  test_extractor_metrics.py  test_extractor_reporting.py  test_glm_aggregators.py  test_inventory.py  test_page_read_retry.py  test_parsing.py  test_qwen_aggregators.py  test_storage.py  test_tppo_deepseek.py
(+2050 files in other folders)
