[project]
name = "sinergi"
version = "0.1.0"
description = "Playwright crawler for downloading Putusan MA PDFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "playwright>=1.56.0",
    "requests>=2.32.0",
    "rich>=14.0.0",
    "selenium>=4.38.0",
    "setuptools>=80.0.0",
    "undetected-chromedriver>=3.5.5",
]

[project.scripts]
sinergi = "sinergi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
