[project]
name = "sinergi"
version = "0.1.0"
description = "Playwright crawler for downloading Putusan MA PDFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "playwright>=1.56.0",
    "pymupdf>=1.26.0",
    "pypdf>=6.0.0",
    "rapidfuzz>=3.14.0",
    "requests>=2.32.0",
    "rich>=14.0.0",
    "selenium>=4.38.0",
    "setuptools>=80.0.0",
    "undetected-chromedriver>=3.5.5",
]

[project.scripts]
sinergi = "crawler.cli:main"
pdf-extractor = "extractor.cli:main"
anak-deepseek-aggregate = "llm_aggregator.anak_deepseek:main"
tppo-deepseek-aggregate = "llm_aggregator.tppo_deepseek:main"
anak-glm-aggregate = "llm_aggregator.anak_glm:main"
tppo-glm-aggregate = "llm_aggregator.tppo_glm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawler", "extractor", "llm_aggregator"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
